--- a/style.css
+++ b/style.css
@@ -8,3 +8,11 @@ body {
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
+
+h3 {
+  margin-bottom: 0.5rem;
+}
+
+#detailPegawai p {
+  margin: 0;
+}
